# quera-education

./: README.md
Bloqade_Python_Tutorial/1_Basics/: chap_I_w_exercises.ipynb
IEEE_2025/: .gitignore  circuit_noise.ipynb  pyproject.toml
QEC_tutorial/: color_me_corrected.ipynb  pyproject.toml  utils.py
