[project]
name = "ieee-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bloqade-circuit>=0.6.2",
    "cirq>=1.6.0",
    "ipykernel>=6.30.0",
    "lark>=1.2.2",
    "ply>=3.11",
    "qpsolvers>=4.8.1",
    "qsimcirq>=0.22.0",
]
