[project]
name = "QEC_tutorial"
version = "0.1.0"
description = "QEC Tutorial"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black[jupyter]>=25.11.0",
    "bloqade>=0.30.0",
    "cirq>=1.6.1",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
]
